# wok

./: IBM-license-blacklist  Makefile.am  configure.ac
contrib/: wok.spec.fedora.in  wok.spec.suse.in  wokd.service.systemd  wokd.sysvinit
debian/: README.Debian  README.source  changelog  control  copyright  rules  watch  wok-dev.install  wok.examples  wok.init  wok.install  wok.lintian-overrides  wok.pam  wok.postinst  wok.postrm  wok.sub.nginx  wok.virt.nginx
debian/missing-sources/ui/libs/datatables/js/: datatables.js
debian/missing-sources/ui/libs/es5-shim/: es5-shim.js
debian/patches/: 0001-Adapt-init-script-to-debian-requirements.patch  0001-Adapt-nginx-configuration.patch  0001-Add-Documentation-for-systemd-service.patch  0001-Add-support-to-relative-paths.patch  0001-Adding-the-possibility-to-disable-the-proxy.patch  0001-Always-install-both-init-script-and-systemd-service.patch  0001-Always-install-firewalld-conf-for-all-distributions.patch  0001-Bug-fix-191-Add-updated-lodash.min.js-file.patch  0001-Change-kill-mode-for-wokd-service.patch  0001-Changing-pam-setting.patch  0001-Fix-fonts-path-to-be-relative.patch  0001-Fix-import-path-for-DITA-DTD.patch  0001-Generate-dhparams-in-post-install.patch  0001-Ignore-code-cosmetics-checkings-to-avoid-build-issue.patch  0001-Make-sure-nginx-is-running-before-reloading-its-conf.patch  0001-Remove-execution-permission-from-css-files.patch  0001-Remove-redundant-kill-on-ExecStop.patch  0001-Rename-wokd-init-to-wok.patch  0001-Rename-wokd-to-wok.patch  0001-Serve-wok-from-relative-path-wok.patch  0001-Update-Datatables-Switch-and-Editable-libraries.patch  0001-Use-alias-to-fix-lintian-error.patch  0001-add-doc-systemd.patch  0002-Bug-fix-191-Break-lines-content-to-be-smaller-than-5.patch  0002-Fix-UI-to-handle-relative-paths.patch  0003-CSS-updates-to-handle-relative-path-support.patch  0004-Update-tests-with-relative-path-support.patch  0005-Add-nginx.service-as-wokd.service-dependency.patch  0006-Generate-SSL-self-signed-certificate-on-package-post.patch  0007-Bug-fix-175-Do-not-generate-nginx-configuration-file.patch  0008-Remove-nginx-specific-parameters-from-wok.conf-file.patch  0009-Revert-Remove-server_root-reference-from-stable-bran.patch  series
src/: wok.conf.in
src/nginx/: Makefile.am  wok.conf
src/wok/: auth.py  config.py.in  proxy.py
tests/: test_api.py  test_exception.py  test_server.py  test_server_root.py  utils.py
ui/css/: bootstrap.custom.css  wok.css
ui/css/opensans/: opensans.css
ui/libs/datatables/css/: datatables.min.css
ui/libs/datatables/js/: datatables.min.js
ui/pages/help/en_US/: settings.dita
